/*
 *
 *   Copyright 2023 Einstein Blanco
 *
 *   Licensed under the GNU General Public License v3.0 (the "License");
 *   you may not use this file except in compliance with the License.
 *   You may obtain a copy of the License at
 *
 *       https://www.gnu.org/licenses/gpl-3.0
 *
 *   Unless required by applicable law or agreed to in writing, software
 *   distributed under the License is distributed on an "AS IS" BASIS,
 *   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *   See the License for the specific language governing permissions and
 *   limitations under the License.
 *
 */

syntax = "proto3";

import "com/android/geto/data/datastore/proto/dark_theme_config.proto";
import "com/android/geto/data/datastore/proto/theme_brand.proto";

option java_package = "com.android.geto.data.datastore.proto";
option java_multiple_files = true;

message UserPreferences {

  ThemeBrandProto theme_brand = 16;
  DarkThemeConfigProto dark_theme_config = 17;

  bool use_dynamic_color = 19;

  bool use_auto_launch = 20;
}

